--- a/src/index.html
+++ b/src/index.html
@@ -63,21 +63,25 @@
             <div class="advantages__icons">
                 <div class="advantages__icon"><img src="icons/cup.svg" alt="cup">
                     Делимся опытом
-                    <p>Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны,
+                    <div class="advantages__text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами
+                        бегают полумарафоны,
                         переплыли Босфор, готовятся к
-                        соревнованиям по триатлону!</p>
+                        соревнованиям по триатлону!</div>
                 </div>
                 <div class="advantages__icon"></img><img src="icons/heart.svg" alt="heart">
                     Заботимся о здоровье
-                    <p>Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в
+                    <div class="advantages__text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему
+                        здоровью и были в
                         радость
-                        Вам и Вашим близким!</p>
+                        Вам и Вашим близким!</div>
                 </div>
                 <div class="advantages__icon"></img><img src="icons/shoe.svg" alt="shoe">
                     Учим бегать
-                    <p>Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России -
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей
+                        школой
+                        бега в России -
                         <span>I love running.</span>
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
