--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
     <div class="advantages">
         <div class="container">
-            <h2>наши приемущества</h2>
+            <h2 class="title">наши приемущества</h2>
             <div class="advantages__icons">
                 <div class="advantages__icon"><img src="icons/cup.svg" alt="cup">
                     Делимся опытом
@@ -77,13 +77,33 @@
                 </div>
                 <div class="advantages__icon"></img><img src="icons/shoe.svg" alt="shoe">
                     Учим бегать
-                    <div class="advantages__text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей
+                    <div class="advantages__text">Помогаем с обучением правильной технике бега! <br> Дружим с крупнейшей
                         школой
                         бега в России -
-                        <span>I love running.</span>
+                        <a href="#">I love running.</a>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию <br> по подбору пульсометра
+            </h2>
+
+            <div class="consultation__descr">
+                Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваше телефон" type="number">
+                <input name=email" required placeholder="Ваш E-mail" type="email">
+
+                <!-- <input type="submit" value="Заказать консультацию"> -->
+                <button class="button button__submit">Заказать консультацию</button>
+            </form>
         </div>
     </div>
 
