--- a/src/index.html
+++ b/src/index.html
@@ -389,6 +389,51 @@
             </div>
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__wrapper">
+                <img src="img/photo_Irina.png" alt="photo_Irina" class="reviews__img">
+
+                <div class="reviews__text">
+                    <h3>Ирина Иванченко <br> <span>2 полумарафона</span></h3>
+                    Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
+                    пульсометр, который подошёл именно под мои цели
+                    и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась
+                    туда же <br><br>
+                    Новые цели - новый гаджет! <br><br>
+                    Спасибо, RunSmart!
+                </div>
+            </div>
+            <div class="reviews__wrapper">
+                <img src="img/photo_Ivan.png" alt="photo_Ivan" class="reviews__img">
+
+                <div class="reviews__text">
+                    <h3>Иван Сёмочкин <br> <span>1 полумарафон</span></h3>
+                    Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе <br> делал. <br>
+                    Купил пульсометр,ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили
+                    пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц
+                    вперёд. <br><br>
+                    С ними подготовился к своему первому полумарафону! Спасибо!!!
+                </div>
+            </div>
+            <div class="reviews__wrapper">
+                <img src="img/photo_Yulia.png" alt="photo_Yulia" class="reviews__img">
+
+                <div class="reviews__text">
+                    <h3>Юлия Дашкина <br> <span>2 полумарафона</span></h3>
+                    Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я
+                    бросала. От друзей
+                    услышала о RunSmart и о беге с контролем пульса и <br> решила попробовать. <br><br>
+                    Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой!
+                    Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и
+                    не намерена останавливаться! <br><br>
+                    Спасибо!!!
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
