--- a/src/index.html
+++ b/src/index.html
@@ -401,8 +401,10 @@
                     Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали
                     пульсометр, который подошёл именно под мои цели
                     и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась
-                    туда же <br><br>
-                    Новые цели - новый гаджет! <br><br>
+                    туда же
+                    <br><br>
+                    Новые цели - новый гаджет!
+                    <br><br>
                     Спасибо, RunSmart!
                 </div>
             </div>
@@ -414,7 +416,8 @@
                     Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе <br> делал. <br>
                     Купил пульсометр,ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили
                     пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц
-                    вперёд. <br><br>
+                    вперёд.
+                    <br><br>
                     С ними подготовился к своему первому полумарафону! Спасибо!!!
                 </div>
             </div>
@@ -425,15 +428,33 @@
                     <h3>Юлия Дашкина <br> <span>2 полумарафона</span></h3>
                     Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я
                     бросала. От друзей
-                    услышала о RunSmart и о беге с контролем пульса и <br> решила попробовать. <br><br>
+                    услышала о RunSmart и о беге с контролем пульса и <br> решила попробовать.
+                    <br><br>
                     Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой!
                     Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и
-                    не намерена останавливаться! <br><br>
+                    не намерена останавливаться!
+                    <br><br>
                     Спасибо!!!
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3930593291407!2d37.64393007708735!3d55.76904497309025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a63609e9f7f%3A0xa84e4d6027b989c1!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDPQujI20YE0LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTA3MDc4!5e0!3m2!1sru!2sua!4v1743075750046!5m2!1sru!2sua"
+            width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
