--- a/src/index.html
+++ b/src/index.html
@@ -99,10 +99,10 @@
             <div class="consultation__descr">
                 Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
             </div>
-            <form class="feed-form" action="#">
+            <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваше телефон" type="number">
-                <input name=email" required placeholder="Ваш E-mail" type="email">
+                <input name="phone" required placeholder="Ваше телефон">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button__submit">Заказать консультацию</button>
             </form>
         </div>
@@ -460,9 +460,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваше телефон" type="number">
-                <input name=email" required placeholder="Ваш E-mail" type="email">
+                <input name="name" placeholder="Ваше имя" type="text">
+                <input name="phone" placeholder="Ваше телефон">
+                <input name="email" placeholder="Ваш E-mail" type="email">
                 <button class="button button__submit">Заказать консультацию</button>
             </form>
         </div>
@@ -473,8 +473,8 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваше телефон" type="number">
-                <input name=email" required placeholder="Ваш E-mail" type="email">
+                <input name="phone" required placeholder="Ваше телефон">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button__submit">Купить</button>
             </form>
         </div>
@@ -492,6 +492,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 
 
